--- a/01 前锋教育——李卫民/0X VUE/01 第一个 Vue 应用/lesson/lesson-01.html
+++ b/01 前锋教育——李卫民/0X VUE/01 第一个 Vue 应用/lesson/lesson-01.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>第一个 Vue 应用</title>
+    <title>lesson-01</title>
 
+    <!-- 引入 Vue.js -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.21/dist/vue.js"></script>
 </head>
 <body>
@@ -13,13 +14,13 @@
         {{message}}
     </div>
 
-   <script type="text/javascript">
+    <script type="text/javascript">
         var vm = new Vue({
-            el : '#app', 
-            data: {
-                message : '你好'
+            el : '#app',
+            data : {
+                message : '你好，Vue！'
             }
         })
-   </script>
+    </script>
 </body>
 </html>
