--- a/01 前锋教育——李卫民/02 Java全栈/03 Java微服务框架/07-Vue/01 vue-hello/first.html
+++ b/01 前锋教育——李卫民/02 Java全栈/03 Java微服务框架/07-Vue/01 vue-hello/first.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>第一个 Vue 应用</title>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.5.21/dist/vue.js"></script>
+
 </head>
 <body>
-    
+    <div id="vue">
+        {{message}}
+    </div>
+
+    <script type="text/javascript">
+        var vm = new Vue({
+            el: '#vue', 
+            data: {
+                message: 'Hello Vue'
+            }
+        });
+    </script>
 </body>
 </html>
